# upflux-smart-filter

./: .gitignore  README.md  docker-compose.debug.yml  docker-compose.yml  requirements.txt
chatbot_api/: Dockerfile  Dockerfile.dev  README.md  entrypoint.sh  pyproject.toml  requirements.txt
chatbot_api/src/: entrypoint.sh  main.py
chatbot_api/src/agents/: agent_scope.py  o2c_agente.py  o2c_agente_huggingface.py  o2c_agente_mongo.py
chatbot_api/src/assistants/: assistant_create.py  assistant_exists.py  assistant_response.py  assistant_scope.py
chatbot_api/src/chroma_data/: chroma.sqlite3
chatbot_api/src/client/: atlas_client.py
chatbot_api/src/data/: datatype_definitions.json  rag_assistant_scope.json
chatbot_api/src/data/payloads/: 1_payload_geral.json  1_payload_geral_answers.json  2_payload_full_oct.json  2_payload_full_oct_answers.json  3_payload_pagamentos.json  3_payload_pagamentos_answers.json  4_payload_perfectso.json  4_payload_perfectso_answers.json  mapping.json  (+8 more)
chatbot_api/src/models/: data.py  o2c_rag_query.py
chatbot_api/src/routes/: agent_routes.py  assistant_routes.py
chatbot_api/src/service/: bi_upflux_conector_service.py  chatbot_service.py  logger.py  orchestrator_service.py
chatbot_api/src/tools/: __init__.py  retriever_tools.py
chatbot_api/src/utils/: async_utils.py  create_retriever.py  documents.py
chatbot_api/tests/: test_assistant_create.py  test_assistant_exists.py  test_assistant_response.py  test_atlas_client.py  test_o2c_agente.py  test_orchestrator_service.py  test_upflux_assistant.py  test_upflux_assistants.py
(+10 files in other folders)
