[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "langchain-community==0.0.29",
    "langchain==0.1.13",
    "langchain-openai==0.1.1",
    "langchain-core==0.1.36",
    "langchainhub==0.1.15",
    "langchain-text-splitters==0.0.1",
    "asyncio==3.4.3",
    "fastapi==0.110.1",
    "neo4j==5.14.1",
    "numpy==1.26.2",
    "openai==1.14.3",
    "opentelemetry-api==1.22.0",
    "pydantic==2.5.1",
    "uvicorn==0.29.0",
    "jq==1.7.0",
    "faiss-cpu==1.7.4",
    "upstash-redis==1.0.0",
    "beautifulsoup4==4.12.2",
    "tiktoken==0.5.2",
    "chromadb==0.4.22"
]

[project.optional-dependencies]
dev = ["black", "flake8"]